--- a/.github/actions/publish-nuget/action.yml
+++ b/.github/actions/publish-nuget/action.yml
@@ -14,8 +14,8 @@ inputs:
     required: false
     default: ""
     description: >
-      Additional warning codes for the `-p:NoWarn=` argument of `dotnet pack`. The items can be
-      separated by any whitespace, including newlines.
+      Additional warning codes for the `-p:NoWarn=` argument of `dotnet pack`. The items can be separated by any
+      whitespace, including newlines.
   dotnet-pack-include-symbols:
     required: false
     default: "true"
