--- a/.github/actions/create-jira-issues-for-community-activities/action.yml
+++ b/.github/actions/create-jira-issues-for-community-activities/action.yml
@@ -12,8 +12,8 @@ inputs:
     required: false
     default: "true"
     description: >
-      If set to "true", Jira issue titles will be suffixed with "in <issue-component>" if the issue-component
-      parameter is specified, or the repository name. If set to "false", no suffix will be added to Jira issue titles.
+      If set to "true", Jira issue titles will be suffixed with "in <issue-component>" if the issue-component parameter
+      is specified, or the repository name. If set to "false", no suffix will be added to Jira issue titles.
 
 runs:
   using: "composite"
