--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -81,8 +81,8 @@ on:
         required: true
         type: string
         description: >
-          What you see at the top of the blade on the Azure Portal, when you open the slot, before the app
-          name in parenthesis.
+          What you see at the top of the blade on the Azure Portal, when you open the slot, before the app name in
+          parenthesis.
       resource-group-name:
         required: true
         type: string
@@ -98,15 +98,15 @@ on:
         required: false
         type: string
         description: >
-          Publishes the application for a given runtime. If you use this option, set "self-contained" to the
-          desired value also. "self-contained" is "false" by default.
+          Publishes the application for a given runtime. If you use this option, set "self-contained" to the desired
+          value also. "self-contained" is "false" by default.
       self-contained:
         required: false
         type: string
         default: "false"
         description: >
-          Publishes the .NET runtime with your application so the runtime doesn't need to be installed on the
-          target machine.
+          Publishes the .NET runtime with your application so the runtime doesn't need to be installed on the target
+          machine.
       application-insights-resource-id:
         required: true
         type: string
