--- a/.github/workflows/msbuild-and-test.yml
+++ b/.github/workflows/msbuild-and-test.yml
@@ -31,12 +31,12 @@ on:
         type: string
         default: "*.sln"
         description: >
-          The path of the solution or project file to be built. If you have exactly one .sln file in the current directory
-          then this can be omitted. Otherwise make sure to specify it to avoid an "MSB1008: Only one project can be
-          specified." error that is thrown when the `*.sln` wildcard results in multiple files. To build a project file you
-          must specify a path that ends with `.csproj`. An example: "./src/*Web/*.Web.csproj". The value is given to
-          PowerShell's `Get-ChildItem` cmdlet as-is, so grepping is still possible but a name with spaces must be escaped
-          separately.
+          The path of the solution or project file to be built. If you have exactly one .sln file in the current
+          directory then this can be omitted. Otherwise make sure to specify it to avoid an "MSB1008: Only one project
+          can be specified." error that is thrown when the `*.sln` wildcard results in multiple files. To build a
+          project file you must specify a path that ends with `.csproj`. An example: "./src/*Web/*.Web.csproj". The
+          value is given to PowerShell's `Get-ChildItem` cmdlet as-is, so grepping is still possible but a name with
+          spaces must be escaped separately.
       build-verbosity:
         required: false
         type: string
