--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -7,8 +7,8 @@ on:
       JIRA_BASE_URL:
         required: false
         description: >
-          Configure as explained under https://github.com/marketplace/actions/jira-login#enviroment-variables.
-          Note that it must NOT end with a slash.
+          Configure as explained under https://github.com/marketplace/actions/jira-login#enviroment-variables. Note that
+          it must NOT end with a slash.
     inputs:
       repository:
         type: string
