--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -181,7 +181,7 @@ jobs:
             ${{ steps.set-up-runtime-option.outputs.runtime-option }}
 
       - name: Login to Azure
-        uses: Lombiq/GitHub-Actions/.github/actions/login-to-azure@issue/NEST-337
+        uses: Lombiq/GitHub-Actions/.github/actions/login-to-azure@dev
         env:
           SERVICE_PRINCIPAL: ${{ secrets.AZURE_APP_SERVICE_DEPLOYMENT_SERVICE_PRINCIPAL }}
 
