Revert "Increasing test verbosity"
This reverts commit 2ed261bab97938a64b9df503b30472925a622d8b.

--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -81,7 +81,7 @@ runs:
       run: |
         $switches = @{
           Solution = Get-SolutionOrProjectPath ${{ inputs.solution-path }}
-          Verbosity = "d"
+          Verbosity = "${{ inputs.test-verbosity }}"
           Filter = "${{ inputs.test-filter }}"
           Configuration = "${{ inputs.test-configuration }}"
         }
