--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -18,11 +18,13 @@ on:
       dictionary-source-prefixes:
         description: >
           JSON map of prefixes for dictionary URLs, "cspell" is necessary. See
-          https://github.com/check-spelling/check-spelling/blob/86a22cfaff3846dbd788acea5d18cf5db6d40dd1/action.yml#L64
-          for current version.
+          https://github.com/check-spelling/check-spelling/blob/v0.0.21/action.yml#L67 for current version.
         required: false
         type: string
-        default: '{"cspell": "https://raw.githubusercontent.com/check-spelling/cspell-dicts/v20220816/dictionaries/"}'
+        default: >
+          {
+            "cspell": "https://raw.githubusercontent.com/check-spelling/cspell-dicts/v20220816/dictionaries/"
+          }
       extra-dictionaries:
         description: Space delimited list of URLs (or `prefix:`+path) to additional word lists.
         required: false
