Enabling check_file_names for fun and profit
https://github.com/check-spelling/check-spelling/wiki/Feature%3A-Check-filenames-and-paths

--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -46,6 +46,7 @@ runs:
     - name: Check Spelling
       uses: check-spelling/check-spelling@v0.0.21
       with:
+        check_file_names: 1
         config: ${{ inputs.config }}
         dictionary_source_prefixes: ${{ inputs.dictionary-source-prefixes }}
         experimental_apply_changes_via_bot: 0
