--- a/.github/actions/build-dotnet/action.yml
+++ b/.github/actions/build-dotnet/action.yml
@@ -82,8 +82,8 @@ inputs:
     description: >
       Whether compiler warnings should be treated as errors during the build process. The default value is "true", the
       compiler flag "-warnaserror" will be used, causing the build to fail if any warnings are generated. If set to
-      "false", the flag "-warnaserror-" will be used, allowing warnings to be generated without causing the build to
-      fail.   
+      "false", the flag "-warnaserror" will not be used, allowing warnings to be generated without causing the build to
+      fail.
 
 runs:
   using: "composite"
