--- a/.github/actions/build-dotnet/action.yml
+++ b/.github/actions/build-dotnet/action.yml
@@ -76,7 +76,7 @@ inputs:
     description: >
       Duration in days after which the artifact of the binary log (if any) will expire. See
       https://github.com/actions/upload-artifact#retention-period for more details.
-  warning-as-error:
+  warnings-as-errors:
     required: false
     default: "true"
     description: >
@@ -166,7 +166,7 @@ runs:
             Switches = $buildSwitches
             ExpectedCodeAnalysisErrors = $expectedCodeAnalysisErrors
             CreateBinaryLog = $${{ inputs.create-binary-log }}
-            WarningAsError = $${{ inputs.warning-as-error }}
+            WarningsAsErrors = $${{ inputs.warnings-as-errors }}
         }
 
         $startTime = [DateTime]::Now
